refactor(architecture): adota camadas pragmaticas e reorganiza docs/tcc
Consolida os 9 UseCase de metodo unico em 4 Service por agregado/recurso
REST (RelatoService, ContaService, PerfilService, CategoriaService),
mantendo os DTOs de application como fronteira entre application e
adapter.rest. Corrige dois endpoints que devolviam DTO de application
direto como corpo HTTP, criando RelatoDetalheResponse/RelatoListagemResponse.
Motivacao e alternativas consideradas em docs/adr/0001-camadas-pragmaticas.md.

Move quase todo docs/tcc/ para fora do repositorio publico: so
regras_projeto.md continua commitado (agora em docs/public/, por ser lido
em tempo real pelo workflow de revisao automatica a cada PR). O restante
(plano, backlog, decisoes de design, gabarito de falhas, planilha de
classificacao) passa a ser mantido localmente pelo autor, fora do
controle de versao do repositorio publico.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>